--- a/site/src/views/admin/adminProducts.ejs
+++ b/site/src/views/admin/adminProducts.ejs
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% productos.forEach(producto => { %>
+                <% products.forEach(producto => { %>
                     <tr>
                         <th scope="row"><%= producto.id %></th>
                         <td><%= producto.productName %></td>
