--- a/site/src/views/users/editProfile.ejs
+++ b/site/src/views/users/editProfile.ejs
@@ -64,7 +64,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Provincia: </label>
-                                <select name="provincia" class="input-select">
+                                <select name="province" class="input-select">
                                     <option value="" hidden selected>Elija una provincia</option>
                                     <option value="laRioja">La Rioja</option>
                                     <option value="chaco">Chaco</option>
@@ -77,7 +77,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Localidad: </label>
-                                <select name="localidad" class="input-select">
+                                <select name="location" class="input-select">
                                     <option value="" hidden selected>Elija una localidad</option>
                                     <option value="localidad1">Localidad1</option>
                                     <option value="localidad2">Localidad2</option>
@@ -90,7 +90,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Dirección: </label>
-                                <input class="input-style" type="text" name="address" placeholder="Direccion" value="<%= user.address ? user.address : "" %>">
+                                <input class="input-style" type="text" name="street" placeholder="Direccion" value="<%= user.street ? user.street : "" %>">
                             </div>
                         </div>
                     </div>
