--- a/site/src/views/admin/adminEdit.ejs
+++ b/site/src/views/admin/adminEdit.ejs
@@ -7,45 +7,44 @@
         
         <div class="container">
             <h2>Editar Producto</h2>
-            <form action="/admin/edit/<%= producto.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+            <form action="/admin/edit/<%= products.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="input-form">
                     <label for="productName">Nombre del producto: </label>
-                    <input type="text" name="productName" id='productName' value="<%= locals.old ? old.productName : producto.productName %>">
+                    <input type="text" name="productName" id='productName' value="<%= locals.old ? old.productName : products.productName %>">
                     <% if(locals.errors && errors.productName) { %>
                         <small class="error"><%= errors.productName.msg %></small>
                     <% } %>
                 </div>
                 <div class="input-form">
                     <label for="price">Precio: </label>
-                    <input type="text" name="price" id='price' value="<%= locals.old ? old.price : producto.price %>">
+                    <input type="text" name="price" id='price' value="<%= locals.old ? old.price : products.price %>">
                     <% if(locals.errors && errors.price) { %>
                         <small class="error"><%= errors.price.msg %></small>
                     <% } %>
                 </div>
                 <div class="input-form">
                     <label for="description">Descripción: </label>
-                    <textarea name="description" id='description'><%= locals.old ? old.description : producto.description %></textarea>
+                    <textarea name="description" id='description'><%= locals.old ? old.description : products.description %></textarea>
                     <% if(locals.errors && errors.description) { %>
                         <small class="error"><%= errors.description.msg %></small>
                     <% } %>
                 </div>
                 <div class="input-form">
                     <label>Categoría: </label>
-                    <select name="category" id="" value="<%= producto.category %>">
-                        <option value="Cocina">Cocina</option>
-                        <option value="Comedor">Comedor</option>
-                        <option value="Dormitorio">Dormitorio</option>
-                        <option value="Living">Living</option>
-                        <option value="Oficina">Oficina</option>
+                    <select name="category" id="">
+                        <option selected hidden value="">Categoría</option>
+                        <% categories.forEach(category => { %>
+                            <option value="<%= category.id %>" <%= locals.old && old.category == category.name ? "selected" : null %> ><%- category.name %></option>
+                        <% }) %>
                     </select>
                 </div>
                 <div class="input-form">
                     <label for="measures">Medidas: </label>
-                    <input type="text" name="measures" id='measures' value="<%= producto.measures %>">
+                    <input type="text" name="measures" id='measures' value="<%= products.measures %>">
                 </div>
                 <div class="input-form">
                     <label for="origin">Origen: </label>
-                    <input type="text" name="origin" id='origin' value="<%= locals.old ? old.origin : producto.origin %>">
+                    <input type="text" name="origin" id='origin' value="<%= locals.old ? old.origin : products.origin %>">
                     <% if(locals.errors && errors.origin) { %>
                         <small class="error"><%= errors.origin.msg %></small>
                     <% } %>
