--- a/site/src/views/envios.ejs
+++ b/site/src/views/envios.ejs
@@ -3,9 +3,9 @@
     <%- include ('partials/head.ejs') %>
 <body>
     <%- include ('partials/header.ejs') %>
-    <main class="comprar">
-        <div class="comocomprar">
-            <img src="images/varias/comprar.png" alt="imagen cómo comprar">
+    <main class="envios">
+        <div class="comoenvios">
+            <img src="images/varias/envios.jpg" alt="imagen metodo envios">
         </div>
 
     </main>
