--- a/site/src/views/partials/tarjetitas.ejs
+++ b/site/src/views/partials/tarjetitas.ejs
@@ -1,13 +1,13 @@
 <section class="categories-section">
     <div class="home-categories">
         <div class="category-card">
-            <a href="#"><img src="\images/tarjetitas/comocomprar.jpg" alt=""></a>
+            <a href="/comprar"><img src="\images/tarjetitas/comocomprar.jpg" alt=""></a>
         </div>
         <div class="category-card">
-            <a href="#"> <img src="\images\tarjetitas\comoenvios.jpg" alt=""></a>
+            <a href="/envios"> <img src="\images\tarjetitas\comoenvios.jpg" alt=""></a>
         </div>
         <div class="category-card">
-            <a href="#"> <img src="\images\tarjetitas\contactanos.jpg" alt=""></a>
+            <a href="/contacto"> <img src="\images\tarjetitas\contactanos.jpg" alt=""></a>
         </div>
     </div>
      
