--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -14,6 +14,10 @@
 @import url('adminHeader.css');
 @import url('adminProducts.css');
 @import url('profile.css');
+@import url('tarjetitas.css');
+@import url('sliderofer.css');
+@import url('cards.css');
+
 
 * {
     margin: 0;
@@ -30,6 +34,11 @@
     color: rgb(8, 1, 1);
     line-height: 63px;
     font-size: 13px;
+}
+
+.comoenvios{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
