corrección de clase en input contacto

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -74,7 +74,7 @@
     <!-- Buscador escritorio -->
     <form action="#" class="search-form-desktop">
       <div class="search-bar">
-        <input type="search" name="busqueda" id="">
+        <input type="search" name="busqueda" id="">
         <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </form>
