--- a/site/src/views/contacto.ejs
+++ b/site/src/views/contacto.ejs
@@ -21,27 +21,27 @@
                         <label for="nombre" class="colocar_nombre">Nombre
                           <span class="obligatorio">*</span>
                         </label>
-                          <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
+                          <input class="inputcontacto" type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
                       </p>
                     
                       <p class="con">
                         <label for="email" class="colocar_email">Email
                           <span class="obligatorio">*</span>
                         </label>
-                          <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+                          <input class="inputcontacto" type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
                       </p>
                   
                       <p class="con">
                         <label for="telefone" class="colocar_telefono">Teléfono
                         </label>
-                          <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+                          <input class="inputcontacto" type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
                       </p>    
                     
                       <p class="con">
                         <label for="asunto" class="colocar_asunto">Asunto
                           <span class="obligatorio">*</span>
                         </label>
-                          <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
+                          <input class="inputcontacto" type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
                       </p>    
                     
                       <p class="con">
