--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -72,9 +72,9 @@
     </div>
 
     <!-- Buscador escritorio -->
-    <form action="#" class="search-form-desktop">
+    <form action="/searchResult" method="GET" class="search-form-desktop">
       <div class="search-bar">
-        <input type="search" name="busqueda" id="">
+        <input type="text" name="busqueda" placeholder="Buscar producto" id="">
         <button type="submit"><i class="fas fa-search"></i></button>
       </div>
     </form>
