--- a/site/src/views/admin/adminEdit.ejs
+++ b/site/src/views/admin/adminEdit.ejs
@@ -7,7 +7,7 @@
         
         <div class="container">
             <h2>Editar Producto</h2>
-            <form action="/admin/edit/<%= products.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+            <form action="/admin/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="input-form">
                     <label for="productName">Nombre del producto: </label>
                     <input type="text" name="productName" id='productName' value="<%= locals.old ? old.productName : product.productName %>">
