--- a/site/src/views/admin/adminIndex.ejs
+++ b/site/src/views/admin/adminIndex.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+    
     <%- include ('../admin/adminHead.ejs') %>
 <body>
     <%- include ('../admin/adminHeader.ejs') %>
