--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -11,9 +11,9 @@
     <nav class="navigation-bar" id="navigation-bar-mobile">
 
       <div class="user-icons-mobile">
-        <a href="http://localhost:3000/product/Carrito"><i class="fas fa-user"></i></a>
-        <a href="/product/carrito"><i class="fas fa-shopping-cart"></i></a>
-      </div>
+        <a href="/users/login"><i class="fas fa-user"></i></a>
+        <a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
+    </div> 
 
 
       <!-- elementos del menu (categorias) -->
