--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -8,17 +8,16 @@
 .login h1 {
     margin-top: 40px;
     font-weight: 500;
-  
+    margin-bottom: 25px;
 }
 .login .card {
     position        : relative;
     width           : 420px;
-    height          : 400px;
+    height          : fit-content;
     box-shadow: 0 0 10px var(--bordes);
     display         : flex;
     flex-direction  : column;
     align-items     : center;
-    gap             : 20px;
     border-radius   : 10px;
     background: linear-gradient(
         150deg
@@ -29,9 +28,8 @@
 }
 
 .login .card__input {
-    margin: 13px 0 0 0;
-    width : 70%;
-    height: 8%;
+    width : 260px;
+    height: 30px;
     padding-left: 10px;
     outline: none;
     border-radius: 5px;
@@ -72,7 +70,6 @@
 }
 
 .login .button--positionIngresar {
-    position: absolute;
     bottom  : 35px;
     text-align: center;
     width: 70%;
@@ -82,7 +79,7 @@
     outline: none;
     border: 2px solid #222222;
     transition: all 0.3s ease-in-out;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
 }
 
 .login .email--absolute {
@@ -96,7 +93,7 @@
 }
 
 .login .register-link {
-    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
