--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -41,6 +41,6 @@
         </div>
     </div>
     <div class="bottom">
-        <p>Copyright © 2021 <a href="#">Grupo 1 Com. 8 Formar - Digital House</a> derechos reservados</p>
+        <p>Copyright © 2021 <a href="https://github.com/RicardojArroyo/grupo_1_muebleiaImperio_c8">Grupo 1 Com. 8 Formar - Digital House</a> derechos reservados</p>
     </div>
 </footer>
