--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -11,27 +11,27 @@
       <form action="/users/register" method="POST" class="card">
         <h1>Crear Cuenta</h1>
         <div class="formulario">
-          <input type="text" placeholder="Nombre" name="name" id="nombre" required class="input-form"><br>
+          <input id="nombre" type="text" placeholder="Nombre" name="name" class="input-form"><br>
           <% if(locals.errors && errors.name) { %>
             <small class="error"><%= errors.name.msg %></small>
           <% } %>
 
-          <input type="text" placeholder="Apellido" name="lastname" required class="input-form"><br>
+          <input id=""type="text" placeholder="Apellido" name="lastname" class="input-form"><br>
           <% if(locals.errors && errors.lastname) { %>
             <small class="error"><%= errors.lastname.msg %></small>
           <% } %>
 
-          <input type="email" placeholder="Email" name="email" required class="input-form"><br>
+          <input id="" type="email" placeholder="Email" name="email" class="input-form"><br>
           <% if(locals.errors && errors.email) { %>
             <small class="error"><%= errors.email.msg %></small>
           <% } %>
 
-          <input type="password" placeholder="Contraseña" name="pass1" required class="input-form"><br>
-          <% if(locals.errors && errors.pass) { %>
-            <small class="error"><%= errors.pass.msg %></small>
+          <input id="" type="password" placeholder="Contraseña" name="pass1"  class="input-form"><br>
+          <% if(locals.errors && errors.pass1) { %>
+            <small class="error"><%= errors.pass1.msg %></small>
           <% } %>
 
-          <input type="password" placeholder="Repita su contraseña" name="pass2" required class="input-form">
+          <input id="" type="password" placeholder="Repita su contraseña" name="pass2"  class="input-form">
           <% if(locals.errors && errors.pass2) { %>
             <small class="error"><%= errors.pass2.msg %></small>
           <% } %>
