--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -43,12 +43,13 @@
     display: flex;
     justify-content: initial;
     align-items: center;
-    font-size: 15px;
+    font-size: 13px;
     color: black;
 }
 
 .register .check {
     font-size: 10px;
+    width: 100%;
 }
 
 .formulario {
