--- a/site/public/css/adminHeader.css
+++ b/site/public/css/adminHeader.css
@@ -1,5 +1,5 @@
 header.admin-header {
-    background-color: blue;
+    background-color: black;
     width: 100%;
 }
 
@@ -29,11 +29,4 @@ header.admin-header .nav-admin a {
 
 header.admin-header .admin-li {
     margin: 0 25px;
-}
-
-@media screen and (max-width: 425px){
-    header.admin-header{
-        width: 100vw;
-
-    }
 }
