--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -8,9 +8,11 @@
 @import url('carrito.css');
 @import url('register.css');
 @import url('productDetail.css');
-
+@import url('adminCreate.css');
+@import url('adminEdit.css');
 @import url('editProfile.css');
-
+@import url('adminHeader.css');
+@import url('adminProducts.css');
 @import url('profile.css');
 @import url('tarjetitas.css');
 @import url('sliderofer.css');
