--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 
 <%- include('../partials/head.ejs') %>
@@ -11,26 +10,25 @@
           <div>
             <h1> Iniciar Sesion</h1>
           </div>
-          <input id="email" class="card__input input--style" type="text" name="email" placeholder="E-mail">
+          <input class="card__input input--style" type="text" name="email" placeholder="E-mail" id="email">
+          <small class="error" id="emailErrors"></small>
           <% if(locals.errors && errors.email) { %>
-            <small class="error">
-              <%= errors.email.msg %>
-            </small>
-            <% } %>
-              <input id="password" class="card__input input--style" type="password" name="password"
-                placeholder="Contraseña">
-              <% if(locals.errors && errors.password) { %>
-                <small class="error">
-                  <%= errors.password.msg %>
-                </small>
-                <% } %>
-                  <div class="check">
-                    <input class="RecordarChecbox" type="checkbox" name="Recordar"required>
-                    <label class="Recordar" for="Recordar">Recordarme</label>
-                  </div>
-                  <input type="submit" role="button" value="Ingresar" class="button button--positionIngresar">
-
-                  <a class="register-link" href="/users/register">¿No tienes una cuenta?</a>
+            <small class="error"><%= errors.email.msg %></small>
+          <% } %>
+          <br>
+          <input class="card__input input--style" type="password" name="password" id="password" placeholder="Contraseña">
+          <small class="error" id="passwordErrors"></small>
+          <% if(locals.errors && errors.password) { %>
+              <small class="error"><%= errors.password.msg %></small>
+          <% } %>
+          <br>
+          <div class="check">
+            <input class="RecordarChecbox" type="checkbox" name="Recordar">
+            <label class="Recordar" for="Recordar">Recordarme</label>
+          </div>
+          <input type="submit" role="button" value="Ingresar" class="button button--positionIngresar">
+          
+          <a class="register-link" href="/users/register">¿No tienes una cuenta?</a>
         </form>
       </div>
 
