validaciones del front

--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -33,7 +33,7 @@
       </div>
 
       <%- include('../partials/footer.ejs') %>
-      <script src="../../../js/loginValFront.js"></script>
+      <script src="../../../js/validations/loginValidator.js"></script>
   </body>
 
 </html>
