--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -60,7 +60,7 @@
 
   </main>
 
-  <script src="../../../js/registerValFront.js"></script>
+  <script src="../../../js/validations/registerValidator.js"></script>
 </body>
 
 </html>
