--- a/site/src/views/admin/adminCreate.ejs
+++ b/site/src/views/admin/adminCreate.ejs
@@ -12,6 +12,7 @@
                             <label for="productName">Nombre del producto: </label>
                             <input type="text" name="productName" id='productName'
                                 value="<%= locals.old && old.productName %>">
+                                <small class="error" id="productNameErrors"></small>
                             <% if(locals.errors && errors.productName) { %>
                                 <small class="error">
                                     <%= errors.productName.msg %>
@@ -49,7 +50,7 @@
                         </div>
                         <div class="input-form">
                             <label>Categoría: </label>
-                            <select name="category" id="">
+                            <select name="category" id="category">
                                 <option selected hidden value="">Categoría</option>
                                 <% categories.forEach(category=> { %>
                                     <option value="<%= category.id %>" <%= locals.old && old.category == category.name ? "selected" : null %> ><%- category.name %></option>
@@ -59,6 +60,7 @@
                         <div class="input-form">
                             <label for="measures">Medidas: </label>
                             <input type="text" name="measures" id='measures'>
+                            <small class="error" id="measuresErrors"></small>
                         </div>
                         <div class="input-form">
                             <label for="origin">Origen: </label>
@@ -79,6 +81,7 @@
                     </form>
                 </div>
             </main>
+    <script src="../../../js/validations/adminCreateValidator.js"></script>
     </body>
 
 </html>
