--- a/site/public/css/contacto.css
+++ b/site/public/css/contacto.css
@@ -3,9 +3,9 @@
 
 
 body.con{
-  height: 100%; 
+  height: 100%;
   font-family: 'Noto Sans', sans-serif;
-  background-image: url('/images/categoria/dormitorio/cama.jpg'); 
+  background-image: url("/site/public/images/fondoadmin1.jpg"); 
 }
 
 
@@ -35,7 +35,7 @@ body.con{
 }
 
 
-.con.textarea{
+.con textarea{
   background-color: #fbfbfb; 
   width: 405px; 
   height: 150px; 
