arreglo hover detalle y discount en cards

--- a/site/src/views/users/userProfile.ejs
+++ b/site/src/views/users/userProfile.ejs
@@ -39,7 +39,7 @@
                             <div class="input-container">
                                 <div class="input-flex">
                                     <label for="">DNI: </label>
-                                    <p><%= user.dni ? user.dni : "" %></p>
+                                    <p><%= user.dni ? user.dni : "------" %></p>
                                 </div>
                             </div>
                     </div>
@@ -48,7 +48,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Teléfono: </label>
-                                <p><%= user.tel ? user.tel : "" %></p>
+                                <p><%= user.tel ? user.tel : "------" %></p>
                             </div>
                         </div>
                         <div class="input-container">
@@ -80,7 +80,7 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Dirección: </label>
-                                <p><%= user.street ? user.street : "" %></p>
+                                <p><%= user.street ? user.street : "------" %></p>
                             </div>
                         </div>
                     </div>
