--- a/site/public/css/cards.css
+++ b/site/public/css/cards.css
@@ -82,7 +82,8 @@
 }
 
 .descripcionimp span{
-    margin-left: 8px;    
+    margin-left: 8px;
+    color: red;    
 }
 
 .descripcionimp span #off{
@@ -115,7 +116,7 @@
     color: #fff;
 }
 
-.button-group .comprar:hover{
+.button-group .detalles:hover{
     background-color: goldenrod;
     transition: 0.6s ease;    
 }
