--- a/site/src/views/partials/cards.ejs
+++ b/site/src/views/partials/cards.ejs
@@ -11,7 +11,7 @@
             <div class="descripcionimp">
                 <h2><%= product.productName %></h2>
                 <p>$ <%-product.price - product.price * product.discount / 100 %><b></b>
-                    <span id="off"><%- product.discount !== 0 ? `${product.discount}% OFF` : "" %></p>                    
+                    <span id="off"><%- product.discount !== 0 ? `${product.discount}% OFF Antes $ ${product.price} ` : "" %></p>                    
             </div>
             <div class="button-group">
                 <a href="/product/productDetail/<%= product.id %>" class="detalles">Ver detalles</a>
