actualización de cambios

--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -11,21 +11,24 @@
           <div>
             <h1> Iniciar Sesion</h1>
           </div>
-          <input id="email" class="card__input input--style" type="text" name="email" placeholder="E-mail">
+          <input class="card__input input--style" type="text" name="email" placeholder="E-mail" id="email">
+          <small class="error" id="emailErrors"></small>
           <% if(locals.errors && errors.email) { %>
             <small class="error">
               <%= errors.email.msg %>
             </small>
             <% } %>
-              <input id="password" class="card__input input--style" type="password" name="password"
-                placeholder="Contraseña">
+            <br>
+            <input class="card__input input--style" type="password" name="password" id="password" placeholder="Contraseña">
+            <small class="error" id="passwordErrors"></small>
               <% if(locals.errors && errors.password) { %>
                 <small class="error">
                   <%= errors.password.msg %>
                 </small>
                 <% } %>
+                <br>
                   <div class="check">
-                    <input class="RecordarChecbox" type="checkbox" name="Recordar"required>
+                    <input class="RecordarChecbox" type="checkbox" name="Recordar" required>
                     <label class="Recordar" for="Recordar">Recordarme</label>
                   </div>
                   <input type="submit" role="button" value="Ingresar" class="button button--positionIngresar">
@@ -36,7 +39,7 @@
 
       <%- include('../partials/footer.ejs') %>
 
-      <script src="../../../js/validations/loginValidator.js"></script>
+        <script src="../../../js/validations/loginValidator.js"></script>
   </body>
 
 </html>
