--- a/site/src/views/admin/adminCreate.ejs
+++ b/site/src/views/admin/adminCreate.ejs
@@ -26,17 +26,16 @@
                                 <small class="error">
                                     <%= errors.price.msg %>
                                 </small>
-                                <% } %>
-                            </div>
+                            <% } %>
+                        </div>
                         <div class="input-form">
-                                    <label for="discount">Descuento: </label>
-                                    <input type="number" name="discount" id='discount'
-                                        value="<%= locals.old && old.discount %>">
-                                    <% if(locals.errors && errors.discount) { %>
-                                        <small class="error">
-                                            <%= errors.discount.msg %>
-                                        </small>
-                                        <% } %>
+                            <label for="discount">Descuento: </label>
+                            <input type="number" name="discount" id='discount' value="<%= locals.old && old.discount %>">
+                                <% if(locals.errors && errors.discount) { %>
+                                    <small class="error">
+                                        <%= errors.discount.msg %>
+                                    </small>
+                                <% } %>
                         </div>
                         <div class="input-form">
                             <label for="description">Descripción: </label>
@@ -53,9 +52,7 @@
                             <select name="category" id="category">
                                 <option selected hidden value="">Categoría</option>
                                 <% categories.forEach(category=> { %>
-                                    <option value="<%= category.id %>" <%=locals.old && old.category==category.name
-                                        ? "selected" : null %> ><%- category.name %>
-                                    </option>
+                                    <option value="<%= category.id %>" <%=locals.old && old.category==category.name ? "selected" : null %> ><%- category.name %></option>
                                     <% }) %>
                             </select>
                         </div>
